// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Performance: metrics evaluates valid input (with image lcp) correctly 1`] = `
Object {
  "cumulativeLayoutShift": 0,
  "cumulativeLayoutShiftMainFrame": 0,
  "firstContentfulPaint": 3364,
  "firstContentfulPaintAllFrames": undefined,
  "firstContentfulPaintAllFramesTs": undefined,
  "firstContentfulPaintTs": undefined,
  "firstMeaningfulPaint": 3364,
  "firstMeaningfulPaintTs": undefined,
  "interactive": 6354,
  "interactiveTs": undefined,
  "largestContentfulPaint": 5567,
  "largestContentfulPaintAllFrames": undefined,
  "largestContentfulPaintAllFramesTs": undefined,
  "largestContentfulPaintTs": undefined,
  "lcpLoadEnd": 5519,
  "lcpLoadStart": 5397,
  "maxPotentialFID": 160,
  "observedCumulativeLayoutShift": 0,
  "observedCumulativeLayoutShiftMainFrame": 0,
  "observedDomContentLoaded": 2474,
  "observedDomContentLoadedTs": 760623117637,
  "observedFirstContentfulPaint": 2685,
  "observedFirstContentfulPaintAllFrames": 2685,
  "observedFirstContentfulPaintAllFramesTs": 760623328111,
  "observedFirstContentfulPaintTs": 760623328111,
  "observedFirstMeaningfulPaint": 2685,
  "observedFirstMeaningfulPaintTs": 760623328111,
  "observedFirstPaint": 2685,
  "observedFirstPaintTs": 760623328111,
  "observedFirstVisualChange": 2652,
  "observedFirstVisualChangeTs": 760623295599,
  "observedLargestContentfulPaint": 2882,
  "observedLargestContentfulPaintAllFrames": 2882,
  "observedLargestContentfulPaintAllFramesTs": 760623525330,
  "observedLargestContentfulPaintTs": 760623525330,
  "observedLastVisualChange": 3269,
  "observedLastVisualChangeTs": 760623912599,
  "observedLoad": 2697,
  "observedLoadTs": 760623340349,
  "observedNavigationStart": 0,
  "observedNavigationStartTs": 760620643599,
  "observedSpeedIndex": 2795,
  "observedSpeedIndexTs": 760623438456,
  "observedTimeOrigin": 0,
  "observedTimeOriginTs": 760620643599,
  "observedTraceEnd": 4778,
  "observedTraceEndTs": 760625421283,
  "speedIndex": 5546,
  "speedIndexTs": undefined,
  "timeToFirstByte": 2394,
  "timeToFirstByteTs": undefined,
  "totalBlockingTime": 162,
}
`;

exports[`Performance: metrics evaluates valid input (with lcp from all frames) correctly 1`] = `
Object {
  "cumulativeLayoutShift": undefined,
  "cumulativeLayoutShiftMainFrame": undefined,
  "firstContentfulPaint": 863,
  "firstContentfulPaintAllFrames": 683,
  "firstContentfulPaintAllFramesTs": 23466705983,
  "firstContentfulPaintTs": 23466886143,
  "firstMeaningfulPaint": 863,
  "firstMeaningfulPaintTs": 23466886143,
  "interactive": 863,
  "interactiveTs": 23466886143,
  "largestContentfulPaint": 863,
  "largestContentfulPaintAllFrames": 683,
  "largestContentfulPaintAllFramesTs": 23466705983,
  "largestContentfulPaintTs": 23466886143,
  "lcpLoadEnd": undefined,
  "lcpLoadStart": undefined,
  "maxPotentialFID": 16,
  "observedCumulativeLayoutShift": undefined,
  "observedCumulativeLayoutShiftMainFrame": undefined,
  "observedDomContentLoaded": 596,
  "observedDomContentLoadedTs": 23466619325,
  "observedFirstContentfulPaint": 863,
  "observedFirstContentfulPaintAllFrames": 683,
  "observedFirstContentfulPaintAllFramesTs": 23466705983,
  "observedFirstContentfulPaintTs": 23466886143,
  "observedFirstMeaningfulPaint": 863,
  "observedFirstMeaningfulPaintTs": 23466886143,
  "observedFirstPaint": 616,
  "observedFirstPaintTs": 23466639588,
  "observedFirstVisualChange": 609,
  "observedFirstVisualChangeTs": 23466632130,
  "observedLargestContentfulPaint": 863,
  "observedLargestContentfulPaintAllFrames": 683,
  "observedLargestContentfulPaintAllFramesTs": 23466705983,
  "observedLargestContentfulPaintTs": 23466886143,
  "observedLastVisualChange": 5881,
  "observedLastVisualChangeTs": 23471904130,
  "observedLoad": 673,
  "observedLoadTs": 23466696096,
  "observedNavigationStart": 0,
  "observedNavigationStartTs": 23466023130,
  "observedSpeedIndex": 1583,
  "observedSpeedIndexTs": 23467605703,
  "observedTimeOrigin": 0,
  "observedTimeOriginTs": 23466023130,
  "observedTraceEnd": 6006,
  "observedTraceEndTs": 23472029453,
  "speedIndex": 1583,
  "speedIndexTs": 23467606130,
  "timeToFirstByte": 565,
  "timeToFirstByteTs": 23466588051,
  "totalBlockingTime": 0,
}
`;

exports[`Performance: metrics evaluates valid input (with lcp) correctly 1`] = `
Object {
  "cumulativeLayoutShift": 0.23332411101386594,
  "cumulativeLayoutShiftMainFrame": 0.23332411101386594,
  "firstContentfulPaint": 1059,
  "firstContentfulPaintAllFrames": undefined,
  "firstContentfulPaintAllFramesTs": undefined,
  "firstContentfulPaintTs": undefined,
  "firstMeaningfulPaint": 1059,
  "firstMeaningfulPaintTs": undefined,
  "interactive": 3149,
  "interactiveTs": undefined,
  "largestContentfulPaint": 1524,
  "largestContentfulPaintAllFrames": undefined,
  "largestContentfulPaintAllFramesTs": undefined,
  "largestContentfulPaintTs": undefined,
  "lcpLoadEnd": undefined,
  "lcpLoadStart": undefined,
  "maxPotentialFID": 163,
  "observedCumulativeLayoutShift": 0.23332411101386594,
  "observedCumulativeLayoutShiftMainFrame": 0.23332411101386594,
  "observedDomContentLoaded": 331,
  "observedDomContentLoadedTs": 343577515428,
  "observedFirstContentfulPaint": 292,
  "observedFirstContentfulPaintAllFrames": 292,
  "observedFirstContentfulPaintAllFramesTs": 343577475882,
  "observedFirstContentfulPaintTs": 343577475882,
  "observedFirstMeaningfulPaint": 292,
  "observedFirstMeaningfulPaintTs": 343577475882,
  "observedFirstPaint": 292,
  "observedFirstPaintTs": 343577475882,
  "observedFirstVisualChange": 207,
  "observedFirstVisualChangeTs": 343577391048,
  "observedLargestContentfulPaint": 292,
  "observedLargestContentfulPaintAllFrames": 292,
  "observedLargestContentfulPaintAllFramesTs": 343577475882,
  "observedLargestContentfulPaintTs": 343577475882,
  "observedLastVisualChange": 391,
  "observedLastVisualChangeTs": 343577575048,
  "observedLoad": 436,
  "observedLoadTs": 343577620312,
  "observedNavigationStart": 0,
  "observedNavigationStartTs": 343577184048,
  "observedSpeedIndex": 261,
  "observedSpeedIndexTs": 343577445114,
  "observedTimeOrigin": 0,
  "observedTimeOriginTs": 343577184048,
  "observedTraceEnd": 3479,
  "observedTraceEndTs": 343580662857,
  "speedIndex": 1059,
  "speedIndexTs": undefined,
  "timeToFirstByte": 638,
  "timeToFirstByteTs": undefined,
  "totalBlockingTime": 84,
}
`;

exports[`Performance: metrics evaluates valid input correctly (throttlingMethod=provided) 1`] = `
Object {
  "cumulativeLayoutShift": 0,
  "cumulativeLayoutShiftMainFrame": 0,
  "firstContentfulPaint": 167,
  "firstContentfulPaintAllFrames": 167,
  "firstContentfulPaintAllFramesTs": 350560322851,
  "firstContentfulPaintTs": 350560322851,
  "firstMeaningfulPaint": 204,
  "firstMeaningfulPaintTs": 350560359679,
  "interactive": undefined,
  "interactiveTs": undefined,
  "largestContentfulPaint": 211,
  "largestContentfulPaintAllFrames": 211,
  "largestContentfulPaintAllFramesTs": 350560366902,
  "largestContentfulPaintTs": 350560366902,
  "lcpLoadEnd": 167,
  "lcpLoadStart": 167,
  "maxPotentialFID": 18,
  "observedCumulativeLayoutShift": 0,
  "observedCumulativeLayoutShiftMainFrame": 0,
  "observedDomContentLoaded": 195,
  "observedDomContentLoadedTs": 350560351013,
  "observedFirstContentfulPaint": 167,
  "observedFirstContentfulPaintAllFrames": 167,
  "observedFirstContentfulPaintAllFramesTs": 350560322851,
  "observedFirstContentfulPaintTs": 350560322851,
  "observedFirstMeaningfulPaint": 204,
  "observedFirstMeaningfulPaintTs": 350560359679,
  "observedFirstPaint": 167,
  "observedFirstPaintTs": 350560322851,
  "observedFirstVisualChange": 174,
  "observedFirstVisualChangeTs": 350560329528,
  "observedLargestContentfulPaint": 211,
  "observedLargestContentfulPaintAllFrames": 211,
  "observedLargestContentfulPaintAllFramesTs": 350560366902,
  "observedLargestContentfulPaintTs": 350560366902,
  "observedLastVisualChange": 2706,
  "observedLastVisualChangeTs": 350562861528,
  "observedLoad": 204,
  "observedLoadTs": 350560359476,
  "observedNavigationStart": 0,
  "observedNavigationStartTs": 350560155528,
  "observedSpeedIndex": 307,
  "observedSpeedIndexTs": 350560462140,
  "observedTimeOrigin": 0,
  "observedTimeOriginTs": 350560155528,
  "observedTraceEnd": 2714,
  "observedTraceEndTs": 350562869197,
  "speedIndex": 307,
  "speedIndexTs": 350560462528,
  "timeToFirstByte": 132,
  "timeToFirstByteTs": 350560287693,
  "totalBlockingTime": undefined,
}
`;

exports[`Performance: metrics evaluates valid input correctly 1`] = `
Object {
  "cumulativeLayoutShift": 0,
  "cumulativeLayoutShiftMainFrame": 0,
  "firstContentfulPaint": 1033,
  "firstContentfulPaintAllFrames": undefined,
  "firstContentfulPaintAllFramesTs": undefined,
  "firstContentfulPaintTs": undefined,
  "firstMeaningfulPaint": 1051,
  "firstMeaningfulPaintTs": undefined,
  "interactive": 1053,
  "interactiveTs": undefined,
  "largestContentfulPaint": 1051,
  "largestContentfulPaintAllFrames": undefined,
  "largestContentfulPaintAllFramesTs": undefined,
  "largestContentfulPaintTs": undefined,
  "lcpLoadEnd": 830,
  "lcpLoadStart": 829,
  "maxPotentialFID": 48,
  "observedCumulativeLayoutShift": 0,
  "observedCumulativeLayoutShiftMainFrame": 0,
  "observedDomContentLoaded": 195,
  "observedDomContentLoadedTs": 350560351013,
  "observedFirstContentfulPaint": 167,
  "observedFirstContentfulPaintAllFrames": 167,
  "observedFirstContentfulPaintAllFramesTs": 350560322851,
  "observedFirstContentfulPaintTs": 350560322851,
  "observedFirstMeaningfulPaint": 204,
  "observedFirstMeaningfulPaintTs": 350560359679,
  "observedFirstPaint": 167,
  "observedFirstPaintTs": 350560322851,
  "observedFirstVisualChange": 174,
  "observedFirstVisualChangeTs": 350560329528,
  "observedLargestContentfulPaint": 211,
  "observedLargestContentfulPaintAllFrames": 211,
  "observedLargestContentfulPaintAllFramesTs": 350560366902,
  "observedLargestContentfulPaintTs": 350560366902,
  "observedLastVisualChange": 2706,
  "observedLastVisualChangeTs": 350562861528,
  "observedLoad": 204,
  "observedLoadTs": 350560359476,
  "observedNavigationStart": 0,
  "observedNavigationStartTs": 350560155528,
  "observedSpeedIndex": 307,
  "observedSpeedIndexTs": 350560462140,
  "observedTimeOrigin": 0,
  "observedTimeOriginTs": 350560155528,
  "observedTraceEnd": 2714,
  "observedTraceEndTs": 350562869197,
  "speedIndex": 1033,
  "speedIndexTs": undefined,
  "timeToFirstByte": 603,
  "timeToFirstByteTs": undefined,
  "totalBlockingTime": 0,
}
`;
